[gd_scene load_steps=8 format=3 uid="uid://ddm41gwgodcaj"]

[ext_resource type="Script" path="res://scenes/game_object/player/player.gd" id="1_aru5m"]
[ext_resource type="PackedScene" uid="uid://bo45tmdmy7sy2" path="res://scenes/ability/sword_ability_controller/sword_ability_controller.tscn" id="2_5b1hm"]
[ext_resource type="PackedScene" uid="uid://dmentdi8liqrx" path="res://scenes/component/health_component.tscn" id="2_21g8r"]
[ext_resource type="Texture2D" uid="uid://byuab5gscoq2h" path="res://scenes/game_object/player/player.png" id="2_uvsxw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_o6gsa"]
radius = 32.0

[sub_resource type="CircleShape2D" id="CircleShape2D_k7phs"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_xehy8"]
radius = 5.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_layer = 0
motion_mode = 1
script = ExtResource("1_aru5m")

[node name="HealthComponent" parent="." instance=ExtResource("2_21g8r")]

[node name="AbilityManager" type="Node" parent="."]

[node name="SwordAbilityController" parent="AbilityManager" instance=ExtResource("2_5b1hm")]

[node name="DamageIntervalTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="PickupArea2D" type="Area2D" parent="."]
position = Vector2(0, -5)
collision_layer = 16
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PickupArea2D"]
shape = SubResource("CircleShape2D_o6gsa")

[node name="CollisionArea2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="CollisionArea2D"]
position = Vector2(0, -7)
shape = SubResource("CircleShape2D_k7phs")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_uvsxw")
offset = Vector2(0, -8)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -5)
shape = SubResource("CircleShape2D_xehy8")
